...
                    android:layout_height="wrap_content"
                    android:text="Create a New Recipe"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/create_rname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Recipe name"
                    android:inputType="text"
                    android:textSize="28dp"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_ingredient_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contentDescription="Add ingredient button"
                        app:backgroundTint="?attr/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_step_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contentDescription="Add directions button"
                        app:backgroundTint="?attr/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Return to previous screen"
            android:cropToPadding="false"
            app:backgroundTint="?attr/colorAccent"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert"
            app:useCompatPadding="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Upload recipe"
            android:cropToPadding="false"
...
