<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_create_recipe"
        android:icon="@drawable/ic_create_recipe_black_24dp"
        android:title="@string/title_create_recipe" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/baseline_store_24"
        android:title="@string/title_store_locator" />

</menu>