<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75sp"
        android:layout_marginBottom="50sp"
        android:text="Sign Up"
        android:textColor="#000000"
        android:textSize="60dp"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_username_edt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="Enter username here"
            android:textColor="#000000"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_password_edt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="At least 8 characters"
            android:inputType="textPassword"
            android:textColor="#000000"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirm_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm password: "
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_confirm_edt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="Re-enter password here"
            android:inputType="textPassword"
            android:textColor="#000000"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:paddingRight="24sp"
            android:text="Sign Up"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Return to Menu"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>